# research_agent_alpha

./: .env.dev  .gitignore  AGENTS.md  LICENSE  README.md  README_FOR_LLM_DEVELOPMENT.md  README_IMPROVEMENTS.md  REFERENCE_VALIDATION_INTEGRATION.md  USAGE.md  USAGE_EXAMPLES.md  alembic.ini  api.py  article_medical_analysis_first_draft.md  check_llms.py  codebase_summary.md  consolidated_analyzer.py  cost_tracker.py  evidence_gatherer.py  input_validation.py  llm_integrations.py  local_runner.py  medical_data.py  medical_reasoning_agent.py  medical_reasoning_agent_original.py  notes.md  observability.py  orchestrator.py  organ_analyzer.py  pdf_generator.py  pending.md  pyproject.toml  reasoning_trace.json  recommendation_synthesizer.py  report_generator.py  router.py  run_analysis.py  simple_medical_agent.py  test_scenarios.json  validation_scoring.py  web_research.py
alembic/: env.py
cache/: reference_validation.db
data/: app.db
database/: README.md  __init__.py  config.py  models.py  repository.py  seed.py  session.py  users.py
document_parser/: README.md  __init__.py  __main__.py  models.py  service.py
examples/: router_queries.md
langchain_agents/: README.md  __init__.py  base.py  factcheck_agent.py  medication_agent.py  procedure_agent.py
medical_diagnostic_analyzer/: README.md  bayesian_engine.py  diagnostic_agent.py  dspy_schemas.py  symptom_database.json
medical_fact_checker/: Prompt Medical V2 - Fact Checker.md  README.md  __init__.py  conftest.py  example_usage.py  medical_fact_checker_agent.py  pytest.ini  requirements-test.txt  run_fact_checker.py  run_tests.sh  test_medical_fact_checker.py
medical_procedure_analyzer/: README.md  __init__.py  colored_logger.py  dspy_schemas.py  input_validation.py  llm_integrations.py  medical_reasoning_agent.py  medication_analyzer.py  report_generator.py  validation_scoring.py  web_research.py
outputs/: .~lock.treatment_for_multiple_sclerosis_output_20251210_000445.pdf#  I_ve_had_a_high_fever_and_a_po_diagnostic_20260428_190259.json  I_ve_had_a_high_fever_and_a_po_diagnostic_report_20260428_190259.md  amoxycyline_cost_report_20251209_065148.json  amoxycyline_medication_analysis_20251209_065148.json  amoxycyline_medication_detailed_20251209_065148.md  amoxycyline_medication_summary_20251209_065148.md  best_natural_options_to_protect_your_hair,_external_use_and_intake_cost_report_20251212_113443.json  best_natural_options_to_protect_your_hair,_external_use_and_intake_output_20251212_113443.md  best_natural_options_to_protect_your_hair,_external_use_and_intake_session_20251212_113443.json  best_natural_options_to_protect_your_hair,_external_use_and_intake_summary_20251212_113443.md  chemotherapy_analysis_result.json  chemotherapy_reasoning_trace.json  chemotherapy_summary_report.md  cholesterol_is_always_bad__tru_diagnostic_20260518_163053.json  cholesterol_is_always_bad__tru_diagnostic_report_20260518_163053.md  choosing_best_soap_output_20251205_014254.md  choosing_best_soap_session_20251205_014254.json  choosing_best_soap_summary_20251205_014254.md  doxycycline_cost_report_20251207_194635.json  doxycycline_cost_report_20251207_195345.json  (+157 more)
reference_validation/: README.md  (+5 more)
(+81 files in other folders)
